{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 11,
  "lineage": "ce33737a-cbaf-25aa-002f-fe63e96fa8f8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "sessions-eip-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05adc8e1bd03699bb",
            "association_id": "eipassoc-0955b50e62330f8a4",
            "domain": "vpc",
            "id": "eipalloc-05adc8e1bd03699bb",
            "instance": "i-071546e79f12e4f1a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03bd93e216b0f53c7",
            "private_dns": "ip-10-0-1-148.ec2.internal",
            "private_ip": "10.0.1.148",
            "public_dns": "ec2-44-217-85-248.compute-1.amazonaws.com",
            "public_ip": "44.217.85.248",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.sessions-instance-tf7",
            "aws_internet_gateway.sessions-gw-tf",
            "aws_subnet.sessions-sn-tf",
            "aws_vpc.sessions-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sessions-instance-tf7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cf10cdf9fcd62d37",
            "arn": "arn:aws:ec2:us-east-1:339713012806:instance/i-071546e79f12e4f1a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-071546e79f12e4f1a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03bd93e216b0f53c7",
            "private_dns": "ip-10-0-1-148.ec2.internal",
            "private_ip": "10.0.1.148",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0488224478de6f7dd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bfd498bf11fe380a",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "sessions-instance-tf7"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "sessions-instance-tf7"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06cc4b9cbb7f356cb"
            ]
          },
          "dependencies": [
            "aws_subnet.sessions-sn-tf",
            "aws_vpc.sessions-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sessions-gw-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713012806:internet-gateway/igw-0f9321cb089462742",
            "id": "igw-0f9321cb089462742",
            "owner_id": "339713012806",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "sessions-gw-tf"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "sessions-gw-tf"
            },
            "vpc_id": "vpc-01ab024b17d9b0ee4"
          },
          "dependencies": [
            "aws_vpc.sessions-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "sessions-acl-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713012806:network-acl/acl-03c2831ded2dea617",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 210,
                "to_port": 0
              }
            ],
            "id": "acl-03c2831ded2dea617",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 210,
                "to_port": 0
              }
            ],
            "owner_id": "339713012806",
            "subnet_ids": [
              "subnet-0bfd498bf11fe380a"
            ],
            "tags": {
              "ManagedBy": "terraform",
              "Name": "sessions-acl-tf"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "sessions-acl-tf"
            },
            "vpc_id": "vpc-01ab024b17d9b0ee4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.sessions-sn-tf",
            "aws_vpc.sessions-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sessions-rt-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713012806:route-table/rtb-0979a0bbbb157d0fd",
            "id": "rtb-0979a0bbbb157d0fd",
            "owner_id": "339713012806",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f9321cb089462742",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "terraform",
              "Name": "sessions-rt-tf"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "sessions-rt-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ab024b17d9b0ee4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sessions-gw-tf",
            "aws_vpc.sessions-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sessions-associ-rt-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7de118623df5994",
            "route_table_id": "rtb-0979a0bbbb157d0fd",
            "subnet_id": "subnet-0bfd498bf11fe380a"
          },
          "dependencies": [
            "aws_internet_gateway.sessions-gw-tf",
            "aws_route_table.sessions-rt-tf",
            "aws_subnet.sessions-sn-tf",
            "aws_vpc.sessions-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sessions-sg-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713012806:security-group/sg-0b34a88cd0bd67db4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b34a88cd0bd67db4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20240208022342157800000001",
            "name_prefix": "terraform-",
            "owner_id": "339713012806",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "terraform",
              "Name": "sessions-sg-tf"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "sessions-sg-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-01ab024b17d9b0ee4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sessions-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sessions-sn-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713012806:subnet/subnet-0bfd498bf11fe380a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bfd498bf11fe380a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "339713012806",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "sessions-sn-tf"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "sessions-sn-tf"
            },
            "vpc_id": "vpc-01ab024b17d9b0ee4"
          },
          "dependencies": [
            "aws_vpc.sessions-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sessions-vpc-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713012806:vpc/vpc-01ab024b17d9b0ee4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e369b389fc141ec4",
            "default_route_table_id": "rtb-0590cc3613832399a",
            "default_security_group_id": "sg-06cc4b9cbb7f356cb",
            "dhcp_options_id": "dopt-0fda5b74f2578d218",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01ab024b17d9b0ee4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0590cc3613832399a",
            "owner_id": "339713012806",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "sessions-vpc-tf"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "sessions-vpc-tf"
            }
          }
        }
      ]
    }
  ]
}